--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -24,11 +24,10 @@ jobs:
         path: ./tomcat            # Relative path under $GITHUB_WORKSPACE
 
     - name: Setup Java 9
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
-        java-version: '9.0.4'     # The JDK version to make available on the path
-        java-package: jdk         # (jre, jdk, or jdk+fx) - defaults to jdk
-        architecture: x64         # (x64 or x86) - defaults to x64
+        distribution: 'temurin' # See 'Supported distributions' for available options
+        java-version: '21'     # The JDK version to make available on the path
 
     - name: List project files and java version
       run: |
