--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - name: Check out tomcat-users.xml
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2
 
     - name: List project files and java version
       run: |
@@ -17,17 +17,18 @@ jobs:
           java -version
 
     - name: Check out Apache Tomcat
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2
       with:
         repository: apache/tomcat # Repository name with owner
         ref: master               # The branch, tag or SHA to checkout
         path: ./tomcat            # Relative path under $GITHUB_WORKSPACE
 
     - name: Setup Java 9
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v1
       with:
-        distribution: 'temurin' # See 'Supported distributions' for available options
-        java-version: '21'     # The JDK version to make available on the path
+        java-version: '9.0.4'     # The JDK version to make available on the path
+        java-package: jdk         # (jre, jdk, or jdk+fx) - defaults to jdk
+        architecture: x64         # (x64 or x86) - defaults to x64
 
     - name: List project files and java version
       run: |
