--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -17,7 +17,7 @@ jobs:
           java -version
 
     - name: Check out Apache Tomcat
-      uses: actions/checkout@v4 # Changed from v2 to v4
+      uses: actions/checkout@v2 # Changed from v4 to v2 revert test
       with:
         repository: apache/tomcat # Repository name with owner
         ref: main               # The branch, tag or SHA to checkout #Change master to main
