--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -29,7 +29,8 @@ jobs:
         #java-version: '9.0.4'     # The JDK version to make available on the path
         java-version: '21'     # added jmb
         #distribution: 'temurin' # added jmb set to oracle testing temurin extremely fast
-        distribution: 'corretto' # test corretto vs temurin
+        #distribution: 'corretto' # test corretto vs temurin
+        distribution: 'temurin' # added jmb winner winner chicken dinner
         #java-package: jdk         # (jre, jdk, or jdk+fx) - defaults to jdk #removed
         #architecture: x64         # (x64 or x86) - defaults to x64 #removed
 
